SFDC/src/objects/Interaction__c.object
<CustomObject>
    <description>Custom object to capture details of an Interaction with a customer.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Point_date__c</fullName>
        <label>Action Point Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_point__c</fullName>
        <label>Action point</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associated_Store__c</fullName>
        <label>Associated Store</label>
        <picklist>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_given_in_lacs__c</fullName>
        <label>Budget given (in lacs)</label>
        <picklist>
            <picklistValues>
                <fullName>Below 2.5 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 to 5 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 to 10 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 to 15 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 to 25 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 to 50 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 to 75 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 lacs to 1 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 1 crore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Venue City</label>
        <picklist>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amritsar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dehradun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faridabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghaziabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jodhpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkatta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucknow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ludhiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mysore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patiala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Srinagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Udaipur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Profile</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hyperlink_Interaction_Name__c</fullName>
        <formula>HYPERLINK(&quot;https://cs3.salesforce.com/&quot; &amp; Id,  Interaction_Name__c,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interaction Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Time_Spent_on_Level_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>If Time Spent on Level 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Time_Spent_on_Level_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>If Time Spent on Level 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Interaction ExternalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Name__c</fullName>
        <formula>Contact__r.FirstName+&apos; &apos;+ Contact__r.LastName  &amp; IF(NOT(ISBLANK(text(Purpose_of_interaction__c))),&quot; (&quot; +  text(Purpose_of_interaction__c)+ &quot;) &quot;,&apos; &apos;) &amp;  Name</formula>
        <label>Interaction Name1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jewellery_Worn_if_any__c</fullName>
        <label>Jewellery Worn, if any</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Detail__c</fullName>
        <label>Venue Location Detail</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium_of_Interaction__c</fullName>
        <label>Medium of Interaction</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting at external event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting instore event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Store appointment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Bought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shortlisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will come back again</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Purchase_Interest__c</fullName>
        <label>Customer Purchase Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Festival-Holi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Festival - Akshay Tritiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Festival - Christmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Festival - Diwali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Festival - Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Festival - Karva chauth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Festival - Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Festival - Rakshabandhan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Gifting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding (Functions unknown)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding (Engagement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding (Gifting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding (Reception)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding (Pheras)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding (Sangeet / Cocktail)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_interaction__c</fullName>
        <label>Sales person purpose of interaction</label>
        <picklist>
            <picklistValues>
                <fullName>Birthday / Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event invite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMJ Sales Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success in business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upcoming Wedding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Query</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection_Acceptance__c</fullName>
        <description>Reason for Buying/Rejection</description>
        <label>Reason for Buying/Rejection</label>
        <picklist>
            <picklistValues>
                <fullName>Craftmanship</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Comfortable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_1__c</fullName>
        <label>Staff1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_2__c</fullName>
        <label>Staff2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Spent_On_Level_1_in_Minutes__c</fullName>
        <label>Time Spent On Level 1 in Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_On_Level_2_in_Minutes__c</fullName>
        <label>Time Spent On Level 2 in Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Interaction ID- {0000}</displayFormat>
        <label>Interaction External ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Staff1_and_Staff2_Check</fullName>
        <active>true</active>
        <description>Staff1 and Staff2 should not be same check</description>
        <errorConditionFormula>IF(
NOT(ISBLANK(Staff_1__c)),
IF((Staff_1__c=Staff_2__c),
true,false),false)</errorConditionFormula>
        <errorDisplayField>Staff_2__c</errorDisplayField>
        <errorMessage>Staff1 and Staff2  should not be same</errorMessage>
    </validationRules>
</CustomObject>